2000-11-25  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/focus.c (focus_grab_buttons):
	* fvwm/fvwm.h (FvwmWindow):
	* fvwm/bindings.c (ParseBinding):
	(binding_cmd):
	* fvwm/fvwm.c (InitVariables):
	* libs/defaults.h (DEFAULT_BUTTONS_TO_GRAB):
	* fvwm/focus.c (update_focus_grabs):
	(update_window_focus_grab):
	* fvwm/bindings.c (binding_cmd):
	overhauled whole button grabbing code grab now work immediately and are
	applied with normal window updates

	* fvwm/builtins.c (fake_click):
	implemented a command allowing to fake mouse clicks for debug purposes

	* fvwm/focus.c (warp_func):
	WarpToWindow handles unmanaged windows and windows on other screens too

	* fvwm/conditional.c (WindowIdFunc):
	* libs/fvwmlib.h (C_UNMANAGED):
	WindowId command handles unmanaged windows too and can fetch the window
	id of the root window of any screen

	* fvwm/conditional.c (PrevFunc):
	(NextFunc):
	(NoneFunc):
	(CurrentFunc):
	(AllFunc):
	(DirectionFunc):
	(PickFunc):
	(WindowIdFunc):
	* fvwm/builtins.c (AddToDecor):
	(DestroyDecor):
	(strokeFunc):
	* fvwm/repeat.c (repeat_function):
	* fvwm/fvwm.c (main):
	(StartupStuff):
	(SetRCDefaults):
	(Done):
	* fvwm/windowlist.c (do_windowList):
	* fvwm/gnome.c (GNOME_HandlePropRequest):
	* fvwm/events.c (HandleButtonRelease):
	(HandleKeyPress):
	(HandlePropertyNotify):
	(HandleClientMessage):
	* fvwm/module_interface.c (ExecuteModuleCommand):
	* fvwm/read.c (run_command_stream):
	* fvwm/menus.c (MenuInteraction):
	(do_menu):
	(pop_menu_down):
	(pop_menu_up):
	(menu_func):
	use new functions

	* fvwm/functions.c (execute_complex_function):
	* fvwm/fvwm.h:
	* fvwm/functions.c (execute_function):
	(old_execute_function):
	* fvwm/functions.h (struct):
	ExecuteFunction() and ExecuteFunctionSaveTmpwin were replaced by
	execute_function(). The new function takes a struct pointer as its
	argument. The old syntax is still provided as old_execute_function().

	* fvwm/virtual.c (unmap_window):
	ICCCM fix

	* fvwm/menus.c (MenuInteraction):