@@ -1,3 +1,8 @@
+2000-11-26  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* FvwmWharf/FvwmWharf.c (ParseOptions):
+	fixed *FvwmWharfGeometry setting
+
 2000-11-23  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* FvwmScript/FvwmScript.c:
